--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -15,22 +15,26 @@
   display: none !important;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-::-webkit-scrollbar-track {
-	background-color: transparent;
-}
-::-webkit-scrollbar-track:hover{
-   @apply bg-gray-300;
-}
-::-webkit-scrollbar-thumb {
-	@apply bg-violet-400 rounded-full;
-}
-::-webkit-scrollbar-thumb:hover {
-	@apply bg-violet-700;
-}
-::-webkit-scrollbar {
-	width: 4px;
-  height: 4px;
+@media (min-width: 768px){
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  ::-webkit-scrollbar-track:hover{
+    @apply bg-gray-300;
+  }
+  ::-webkit-scrollbar-thumb {
+    @apply bg-violet-400 rounded-full;
+  }
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-violet-700;
+  }
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+
 }
 /* ::-webkit-scrollbar:hover{
   width: 4px;
